--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.0.2",
     "axios": "^0.19.2",
     "customize-cra": "^0.9.1",
+    "dragm": "^0.0.5",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
