--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-resizable": "^1.7.2",
     "@types/react-responsive": "^8.0.2",
-    "antd": "^4.0.2",
+    "antd": "^4.0.3",
     "axios": "^0.19.2",
     "customize-cra": "^0.9.1",
     "dragm": "^0.0.5",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
+    "react-resizable": "^1.10.1",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
